{{$NEXT}}

Version 0.08: 2017-02-26
  * Add support for different builders, make mbtiny default.

Version 0.07: 2014-09-03
  * Make the smartmatch warning really shut up.
  * Make README really allow_dirty.

Version 0.06: 2014-09-03
  * Fix dependency declaration.

Version 0.05: 2014-09-03
  * Add automatic README generation and copying to the project dir.

Version 0.04: 2014-05-05
  * Fix a few minor errors and warnings

Version 0.03: 2011-11-09
  * Use # AUTHORITY and # VERSION comments (OurPkgVersion) so that line
    numbers are stable.
  * Add 'compat' option to act like a given version. compat = 0.02 will
    make VERSION and AUTHORITY act like 0.02.
  * Add 'no_MakeMaker' option to suppress the dzil MakeMaker plugin so I
    can use another one.

Version 0.02: 2011-08-18
  * First intentional release, with correct git handling.

Version 0.01: 2011-08-17
  * Accidentally released an incomplete version to CPAN. Amusing, since
    this is the module I'm using to manage my release process.